# vgdb

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  Rocket.toml
db/: vgdb.sqlite  vgdb_create.sql
src/: main.rs  models.rs
static/assets/: styles.css
static/assets/js/: tilt-effect.js
views/: index.html.tera
views/error/: 404.html.tera
views/games/: {platformId}.html.tera
