[package]
name = "vgdb"
version = "0.0.0"
edition = "2021"

publish = false

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["sqlite_pool"]
